--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">My App</string>
+    <string name="LogInPage">Log in page</string>
+    <string name="SignUp">Sign up</string>
+    <string name="username">Username</string>
+    <string name="go">Go</string>
+    <string name="cancel">Cancel</string>
+    <string name="password">Password</string>
 </resources>
